--- a/presentation/style.css
+++ b/presentation/style.css
@@ -65,6 +65,10 @@ p, h3
 	margin-top:100px;
 	margin-bottom:20px;
 }
+.print_footer 
+{
+	display: none;
+}
 
 .correct_answer, .correct_answer_win
 {
