--- a/html/presentation/style-min.css
+++ b/html/presentation/style-min.css
@@ -35,7 +35,7 @@ ol{margin-top:18px;margin-bottom:24px;}
 .test_table{border-collapse:collapse;margin:0 0 1em;}
 .test_table td{border:1px solid grey;}
 .test_table ol{margin-left:50px;}
-@media screen and (max-width:800px){body{width:90%;max-width:470px;margin:0 5px;font-size:14px;}
+@media screen and (max-width:480px){body{width:90%;max-width:470px;margin:0 5px;font-size:14px;}
 h1{font-size:1.2em;margin:0.5em 0 0;text-align:left;}
 h2{text-align:left;font-style:italics;font-size:1em;font-weight:normal;margin-bottom:1em;}
 h3{font-size:1em;}
@@ -52,4 +52,6 @@ li{margin-bottom:10px;}
 .layout_box{border:1px solid gray;padding:5px;}
 .mobilebutton{-moz-box-shadow:0px 1px 0px 0px #ffffff;-webkit-box-shadow:0px 1px 0px 0px #ffffff;box-shadow:0px 1px 0px 0px #ffffff;background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #ededed), color-stop(1, #dfdfdf));background:-moz-linear-gradient(center top, #ededed 5%, #dfdfdf 100%);filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#ededed', endColorstr='#dfdfdf');background-color:#ededed;border:1px solid #dcdcdc;display:block;color:#0000ff;font-family:arial;font-size:15px;padding:10px 24px;text-decoration:none;margin-bottom:6px;width:90%;}
 .button{text-align:center;}
+}
+@media screen and (max-width:800px){body{margin:0 5px;}
 }
